--- a/src/components/SearchForm/SearchForm.module.css
+++ b/src/components/SearchForm/SearchForm.module.css
@@ -1,11 +1,11 @@
 .searchForm {
-  margin: 1rem 0 0 1rem
+  margin: 1rem 0 0 1rem;
 }
 .searchInput {
   background-color: transparent;
   border: 1px solid #414141;
   color: #fff;
-  margin-right: .3rem;
+  margin-right: 0.3rem;
   width: 70%;
   max-width: 20rem;
 }
@@ -19,5 +19,5 @@
 
 .submitBtn:hover {
   color: #65fe08;
-  text-shadow:0px 0px 30px #65fe08;
+  text-shadow: 0px 0px 30px #65fe08;
 }
