--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -1,3 +1,13 @@
+.movieList {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.movieList li {
+  margin-bottom: 30px;
+}
+
 .navLink {
   color: #fff;
   font-size: 1rem;
@@ -7,5 +17,12 @@
 .navLink:hover {
   color: #65fe08;
   text-shadow: 0px 0px 30px #65fe08;
+}
+
+.poster {
+  width: 90%;
+  aspect-ratio: 2 / 3;
+  max-width: 25rem;
+  border-radius: 5%;
 }
 
